course crud operations added

--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Home/Index.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Home/Index.cshtml
@@ -23,6 +23,9 @@
                         <a class="nav-link" href="/Department/Create">Add Department</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/Course/Create">Add Course</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/Student/Create">Add Student</a>
                     </li>
                     <li class="nav-item">
