--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Student/Search.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Student/Search.cshtml
@@ -84,7 +84,10 @@
                                         <td>@student.Department?.DepartmentName</td>
                                         <td>@student.Department?.Faculty?.FacultyName</td>
                                         <td>
-                                            <a asp-action="Details" asp-route-id="@student.StudentID" class="btn btn-sm btn-info">Details</a>
+                                                        <form asp-action="Details" asp-controller="Student" method="post" class="d-inline">
+                                                            <input type="hidden" name="id" value="@student.StudentID" />
+                                                            <button type="submit" class="btn btn-sm btn-info">Details</button>
+                                                        </form>
                                         </td>
                                     </tr>
                     }
