--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Course/Index.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Course/Index.cshtml
@@ -4,8 +4,20 @@
     ViewData["Title"] = "Course List";
 }
 
-<div class="container mt-5">
-    <h2>Course List</h2>
+<div class="container mt-2">
+
+
+        <div class="row align-items-center mt-3">
+            <div class="col-auto">
+                <h2>Course List</h2>
+            </div>
+            <div class="col text-end">
+                <a asp-action="Create" class="btn btn-primary">Add New Course</a>
+                <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
+            </div>
+        </div>
+
+
 
     @if (TempData["SuccessMessage"] != null)
     {
@@ -19,11 +31,6 @@
             @TempData["ErrorMessage"]
             </div>
     }
-
-    <p>
-        <a asp-action="Create" class="btn btn-primary">Add New Course</a>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
-    </p>
 
     <table class="table table-striped">
         <thead>
