--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Student/Index.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Student/Index.cshtml
@@ -4,8 +4,18 @@
     ViewData["Title"] = "Student List";
 }
 
-<div class="container mt-5">
-    <h2>Student List</h2>
+<div class="container mt-2">
+
+        <div class="row align-items-center mt-3">
+            <div class="col-auto">
+                 <h2>Student List</h2>
+            </div>
+            <div class="col text-end">
+                <a asp-action="Create" class="btn btn-primary">Add New Student</a>
+                <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
+            </div>
+        </div>
+
 
     @if (TempData["SuccessMessage"] != null)
     {
@@ -20,10 +30,6 @@
             </div>
     }
 
-    <p>
-        <a asp-action="Create" class="btn btn-primary">Add New Student</a>
-        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
-    </p>
 
     <table class="table table-striped">
         <thead>
