--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Student/Search.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Student/Search.cshtml
@@ -4,8 +4,16 @@
     ViewData["Title"] = "Search Students";
 }
 
-<div class="container mt-5">
-    <h2>Search Students</h2>
+<div class="container mt-2">
+
+        <div class="row align-items-center mt-3">
+            <div class="col-auto">
+                <h2>Search Students</h2>
+            </div>
+            <div class="col text-end">
+                <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
+            </div>
+        </div>
 
     @if (TempData["SuccessMessage"] != null)
     {
@@ -54,7 +62,6 @@
         </div>
         <div class="mb-3">
             <button type="submit" class="btn btn-primary">Search</button>
-            <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
         </div>
     </form>
 
