course filter by year and semester

--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Course/Details.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Course/Details.cshtml
@@ -11,7 +11,7 @@
                 <h2>Course Details</h2>
             </div>
             <div class="col text-end">
-                <a asp-action="Index" asp-controller="Course" class="btn btn-secondary mt-3">Back to Course List</a>
+                <a asp-action="Index" asp-controller="Course" class="btn btn-secondary">Back to Course List</a>
                 <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Back to Home</a>
             </div>
         </div>
