--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Home/Index.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                         <a href="/Course/Index" class="btn btn-primary w-100">View Courses</a>
                     </div>
                     <div class="col-md-3 col-sm-6">
-                        <a href="/Student/Search" class="btn btn-primary w-100">View Students</a>
+                        <a href="/Student/Index" class="btn btn-primary w-100">View Students</a>
                     </div>
                     <!-- Add New -->
                     <div class="col-md-3 col-sm-6">
