--- a/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Shared/_Layout.cshtml
+++ b/labwork-5/project/DatabaseLabWork5/DatabaseLabWork5/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                             <li><a class="dropdown-item" href="/Faculty/Index">View Faculties</a></li>
                             <li><a class="dropdown-item" href="/Department/Index">View Departments</a></li>
                             <li><a class="dropdown-item" href="/Course/Index">View Courses</a></li>
-                            <li><a class="dropdown-item" href="/Student/Search">View Students</a></li>
+                            <li><a class="dropdown-item" href="/Student/Index">View Students</a></li>
                         </ul>
                     </li>
                     <!-- Search Student -->
